hard-gists/1217855/run.log
=== Docker Run Log for 1217855 ===
Started at: Mi 29. Okt 11:59:20 CET 2025

[2025-10-29 11:59:21] START: Running container for 1217855
[2025-10-29 11:59:21] SUCCESS: Container 1e7b8e9d236a6675380e266b9d20fea1900b304d923a424646432610385e9863 started for 1217855
=== Container logs for 1217855 ===
  File "/snippet.py", line 22
    print 'Starting %s processes' % number_of_processes
    ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
SyntaxError: Missing parentheses in call to 'print'. Did you mean print(...)?
=== End of logs for 1217855 ===
[2025-10-29 11:59:23] INFO: Container 1e7b8e9d236a6675380e266b9d20fea1900b304d923a424646432610385e9863 has stopped
